--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -7,4 +7,9 @@ en:
   label_path_new: "add svn directory"
   succcessful_create_svn_directory: "new directory created."
   field_path: "path"
+  label_svn_authz_info: "SVN authorization infomation"
+  label_svn_member: "user/group"
+  label_svn_read: "read"
+  label_svn_write: "write"
+  
   
