--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -7,8 +7,12 @@ ja:
   label_path_new: "新しいディレクトリを追加"
   succcessful_create_svn_directory: "新しいディレクトリを作成しました。"
   field_path: "ディレクトリパス"
+  field_user: "ユーザ"
+  field_readable: "参照可"
+  field_writable: "更新可"
   label_svn_authz_info: "SVNアクセス権設定情報"
   label_svn_member: "ユーザ／グループ"
   label_svn_read: "読込み"
   label_svn_write: "書込み"
+  label_authz_add: "アクセス権の追加"
       
